# buongiorno-caffe-bot

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: build.yml  coverage.yml
docs/: commands.txt
src/: bot.rs  main.rs
src/bot/: answer.rs  automatize.rs  commands.rs  config.rs  mod.rs  providers.rs  repository.rs
src/buongiornissimo/: mod.rs
src/buongiornissimo/providers/: ilmondodigrazia.rs  mod.rs
src/repository/: birthday.rs  chat.rs  mod.rs
src/utils/: mod.rs  random.rs
