[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["multimedia"]
description = "A telegram bot to receive the best italian boomer flavoured buongiornissimi"
edition = "2021"
homepage = "https://github.com/veeso/buongiorno-caffe-bot"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["bot", "telegram", "telegram-bot", "buongiornissimo"]
license = "Unlicense"
name = "buongiorno-caffe-bot"
readme = "README.md"
repository = "https://github.com/veeso/buongiorno-caffe-bot"
version = "0.2.0"

[[bin]]
name = "buongiorno-caffe-bot"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
async-trait = "^0.1.57"
bdays = "^0.1"
chrono = "^0.4"
const_format = "^0.2"
envy = "^0.4.2"
once_cell = "^1.13"
rand = "0.8.5"
reqwest = { version = "^0.11", features = [ "rustls-tls" ] }
scraper = "^0.13.0"
serde = { version = "^1.0.0", features = [ "derive" ] }
sqlx = { version = "^0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
teloxide = { version = "^0.10", features = ["macros", "auto-send", "rustls", "webhooks", "webhooks-axum"] }
thiserror = "^1.0"
tokio = { version = "1.20.1", features = [ "full" ] }
tokio-cron-scheduler = "^0.8"
tracing = "^0.1"
tracing-subscriber = "^0.2"
url = "^2.2.2"

[dev-dependencies]
pretty_assertions = "^1.2.1"
tempfile = "^3.2.0"
