[package]
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
categories = ["multimedia"]
description = "A telegram bot to receive the best italian boomer flavoured buongiornissimi"
edition = "2024"
homepage = "https://github.com/veeso/buongiorno-caffe-bot"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["bot", "telegram", "telegram-bot", "buongiornissimo"]
license = "Unlicense"
name = "buongiorno-caffe-bot"
readme = "README.md"
repository = "https://github.com/veeso/buongiorno-caffe-bot"
version = "0.3.2"

[[bin]]
name = "buongiorno-caffe-bot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
buongiornissimo-rs = "0.3"
chrono = "0.4"
envy = "0.4"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
teloxide = { version = "0.17", features = ["macros", "rustls"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
